# report-generator

./: .gitignore  README.md  report-generator.cabal
snaplets/api/snaplets/postgresql-simple/: devel.cfg
snaplets/heist/templates/: base.tpl  index.tpl  reports.tpl
src/: Api.hs  App.hs  DataTypes.hs  Main.hs  ReportData.hs
src/api/: Core.hs  DataTypes.hs  Generation.hs  Reports.hs  Utility.hs  Validation.hs
