Name:                report-generator
Version:             0.1
Synopsis:            Report Generator
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable report-generator
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    heist                     >= 0.14    && < 0.15,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap                      >= 0.14  && < 0.15,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    snap-loader-static        >= 0.9     && < 0.10,
    snaplet-postgresql-simple >= 0.6,
    postgresql-simple         >= 0.4   && < 0.5,
    text                      >=1.2    && < 1.3,
    lens                      >=4.11   && < 4.12,
    aeson                     >=0.8    && < 0.9,
    digestive-functors        >=0.8    && < 0.9, 
    digestive-functors-aeson  >=1.1    && <1.2,
    attoparsec                >=0.13   && < 0.14,
    scientific                >=0.3    && < 0.4

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
